yippee! Here's the commit message for your changes:

--- a/index.html
+++ b/index.html
@@ -25,25 +25,22 @@
       <img src="assets/od imgs/SR_Friday.png" alt="Events Icon" class="events-icon" />
       <strong>Scraprun Friday</strong> <span class="event-time">2 & 6 Pst</span>
       <div class="event-recurring">Every Friday</div>
-      <br>
-      <div class="event">
+    </div>
+    <div class="event">
       <img src="assets/od imgs/mini.png" alt="Events Icon" class="events-icon" />
       <strong>Minigames</strong> <span class="event-time">7 PM AEST</span>
       <div class="event-recurring">Every Friday</div>
     </div>
-<br>
     <div class="event">
       <img src="assets/od imgs/kotc.png" alt="Events Icon" class="events-icon" />
       <strong>King Of The Court</strong> <span class="event-time">7 PM AEST</span>
       <div class="event-recurring">Every Monday</div>
     </div>
-    <br>
     <div class="event">
       <img src="assets/od imgs/ch.png" alt="Events Icon" class="events-icon" />
       <strong>Clubhouse Scraprun</strong> <span class="event-time">7 PM AEST</span>
       <div class="event-recurring">Every Friday</div>
     </div>
-    <br>
     <div class="event">
       <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
       <strong>E</strong> <span class="event-time">TIME</span>
