--- a/index.html
+++ b/index.html
@@ -42,8 +42,33 @@
       <div class="event-recurring">Every Friday</div>
     </div>
     <div class="event">
+      <img src="assets/od imgs/tag.png" alt="Events Icon" class="events-icon" />
+      <strong>Tag</strong> <span class="event-time">7 PM AEST</span>
+      <div class="event-recurring">Every Thursday</div>
+    </div>
+    <div class="event">
       <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
-      <strong>E</strong> <span class="event-time">TIME</span>
+      <strong>Soccer Saturday</strong> <span class="event-time">7 PM AEST</span>
+      <div class="event-recurring">Every Saturday</div>
+    </div>
+    <div class="event">
+      <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
+      <strong>E</strong> <span class="event-time">7 PM AEST</span>
+      <div class="event-recurring">Every Day</div>
+    </div>
+    <div class="event">
+      <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
+      <strong>E</strong> <span class="event-time">7 PM AEST</span>
+      <div class="event-recurring">Every Day</div>
+    </div>
+    <div class="event">
+      <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
+      <strong>E</strong> <span class="event-time">7 PM AEST</span>
+      <div class="event-recurring">Every Day</div>
+    </div>
+    <div class="event">
+      <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
+      <strong>E</strong> <span class="event-time">7 PM AEST</span>
       <div class="event-recurring">Every Day</div>
     </div>
   </div>
