--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
     </div>
     <div class="event">
       <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
-      <strong>E</strong> <span class="event-time">7 PM AEST</span>
+      <strong>NA Clubhouse</strong> <span class="event-time">7 PM EST</span>
       <div class="event-recurring">Every Day</div>
     </div>
     <div class="event">
       <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
-      <strong>E</strong> <span class="event-time">7 PM AEST</span>
+      <strong>OCE Clubhouse</strong> <span class="event-time">7 PM AEST</span>
       <div class="event-recurring">Every Day</div>
     </div>
     <div class="event">
       <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
-      <strong>E</strong> <span class="event-time">7 PM AEST</span>
+      <strong>EU Clubhouse</strong> <span class="event-time">7 PM BST</span>
       <div class="event-recurring">Every Day</div>
     </div>
     <div class="event">
-      <img src="assets/od imgs/" alt="Events Icon" class="events-icon" />
-      <strong>E</strong> <span class="event-time">7 PM AEST</span>
-      <div class="event-recurring">Every Day</div>
+      <img src="assets/od imgs/tfil.png" alt="Events Icon" class="events-icon" />
+      <strong>The Floor Is Lava</strong> <span class="event-time">7 PM AEST</span>
+      <div class="event-recurring">Every Wednesday</div>
     </div>
   </div>
 
